--- a/learn/flask_blog/templates/layout.html
+++ b/learn/flask_blog/templates/layout.html
@@ -8,9 +8,11 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js">
   </script>
   <!-- bootstrapのナビゲーションバーのテンプレ -->
+  <!-- url_for でリンク名とビューに定義しているメソッド名を自動で紐付け -->
+
     <div class="container">
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="/">Flask Blog</a>
+        <a class="navbar-brand" href='{{url_for("show_entries")}}'>Flask Blog</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon">
             </span>
@@ -20,11 +22,11 @@
           <ul class="nav navbar-nav navbar-right">
             {% if not session.logged_in %} <!--  ログインしていないときの処理 -->
             <li class="nav-item">
-              <a class="nav-link" href="/login">ログイン</a>
+              <a class="nav-link" href='{{url_for("login")}}'>ログイン</a>
             </li>
             {% else %} <!-- ログインしているときの処理 -->
             <li class="nav-item">
-              <a class="nav-link" href="/logout">ログアウト</a>
+              <a class="nav-link" href='{{url_for("logout")}}'>ログアウト</a>
             </li>
             {% endif %}
           </ul>
