--- a/learn/flask_blog/templates/login.html
+++ b/learn/flask_blog/templates/login.html
@@ -4,7 +4,7 @@
   <!-- input name はフォームに入力されたデータを格納する（ユーザー名のフォームにに入力された名前はusernameに）  -->
   <!-- <form action="/login" method=post>で /loginにpostされる -->
 
-      <form action="/login" method=post>
+      <form action="{{url_for('login')}}" method=post>
         <div class="form-group">
           <label for="InputTitle">ユーザ名</label>
           <input type="text" class="form-control" id="InputTitle" name=username>
